--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -815,6 +815,7 @@ body {
 	border: 1px solid #d9d9d9;
 	border-top: 0;
 	text-transform: none;
+	resize: none;
 }
 
 .customer-action__form-submit {
@@ -1009,6 +1010,14 @@ body {
 	font-family: $montserrat-bold-font;
 	font-size: 13px;
 	margin-bottom: 5px;
+	color: #000000;
+	transition: 200ms;
+}
+
+.news__header:hover {
+	color: rgba(0, 0, 0, .7);
+	text-decoration: none;
+	transition: 200ms;
 }
 
 .news__text {
@@ -1334,11 +1343,13 @@ body {
 	.news__view-all {
 		font-size: 12px;
 		text-decoration: underline;
+		transition: 200ms;
 	}
 
 	.news__view-all:hover {
 		text-decoration: none;
 		color: rgba(0, 0, 0, 0.7);
+		transition: 200ms;
 	}
 
 	.news__item {
@@ -1705,12 +1716,22 @@ body {
 		padding: 50px 10px;
 	}
 
+	.news__view-all {
+		position: static;
+		display: block;
+		margin-top: 30px;
+		padding-right: 20px;
+		text-align: right;
+	}
+
 	.news__item {
 		flex-flow: wrap;
 		height: auto;
 	}
 
 	.news__image {
+		width: 100%;
+		height: 100px;
 		margin: 0 0 10px 0;
 		text-align: center;
 	}
