--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -41,6 +41,49 @@ body {
 	z-index: 9999;
 }
 
+.header_news {
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
+	margin-left: 0;
+	padding: 5px;
+	max-width: 100%;
+	background-color: $primary-color-light-blue;
+
+	.logo {
+		display: flex;
+		justify-content: space-evenly;
+		align-items: center;
+		padding: 0;
+		width: auto;
+		height: auto;
+		background-color: transparent;
+
+		img {
+			display: none;
+		}
+	}
+
+	.logo__title {
+		margin: 0 0 0 10px;
+		line-height: 25px;
+	}
+
+	.logo__company-name {
+		display: none;
+	}
+
+	.header__options {
+		margin: 0;
+		padding: 0;
+	}
+
+	.nav__menu {
+		margin: 0;
+	}
+}
+
 .logo {
 	box-sizing: border-box;
 	padding-top: 60px;
@@ -330,6 +373,11 @@ body {
 .slider__triangle_right {
 	transform: rotate3d(0, 1, 0, 180deg);
 	right: 0;
+}
+
+.important-news {
+	max-width: 1336px;
+	margin: 20px auto 0 auto;
 }
 
 .action-box__container {
@@ -1188,6 +1236,28 @@ body {
 		padding: 0;
 	}
 
+	.header_news {
+		padding: 5px;
+		flex-flow: wrap;
+		
+		.logo {
+			justify-content: center;
+			width: 50%;
+		}
+
+		.logo__title {
+			width: auto;
+		}
+
+		.header__options {
+			width: 50%;
+		}
+
+		.nav {
+			margin-top: 20px;
+		}
+	}
+
 	.header__options {
 		justify-content: center;
 	}
@@ -1312,6 +1382,18 @@ body {
 }
 
 @media screen and (max-width: 1200px) {
+
+	.header_news {
+
+		.logo {
+			width: 40%;
+		}
+
+		.header__options {
+			width: 60%;
+		}
+	}
+
 	.fleet-gallery__slider {
 		padding-left: calc((100% - 380px) / 2);
 	}
@@ -1382,6 +1464,17 @@ body {
 }
 
 @media screen and (max-width: 950px) {
+
+	.header_news {
+		.logo {
+			width: 30%;
+		}
+
+		.header__options {
+			width: 70%;
+		}
+	}
+
 	.slider__text {
 		right: 200px;
 	}
@@ -1411,7 +1504,31 @@ body {
 		background-color: transparent;
 	}
 
-	.logo {
+	.header_news {
+		display: block;
+		padding: 0;
+
+		.logo {
+			display: block;
+			width: 100%;
+			background-color: $primary-color-dark-blue;
+		}
+
+		.logo__title {
+			margin: 0;
+		}
+
+		.nav {
+			margin-top: 0;
+		}
+
+		.header__search {
+			margin-top: 10px;
+		}
+	}
+
+	.logo,
+	.header_news .logo {
 		padding: 0 0 0 10px;
 		width: 100%;
 		height: auto;
@@ -1425,7 +1542,8 @@ body {
 		}
 	}
 
-	.logo__title {
+	.logo__title,
+	.header_news .logo__title {
 		display: inline-block;
 		width: auto;
 		line-height: 37px;
@@ -1476,7 +1594,8 @@ body {
 		margin-top: 6px;
 	}
 
-	.header__options {
+	.header__options,
+	.header_news .header__options {
 		justify-content: flex-start;
 		flex-wrap: wrap-reverse;
 		box-sizing: border-box;
@@ -1511,7 +1630,7 @@ body {
 	.header__logout,
 	.header__languages {
 		padding: 5px 10px 5px 0;
-		margin: 0;
+		margin: 0 0 30px 0;
 	}
 
 	.header__logout:hover,
@@ -1519,7 +1638,12 @@ body {
 		color: #ffffff;
 	}
 
-	.nav {
+	.header__search {
+		margin-bottom: 30px;
+	}
+
+	.nav,
+	.header_news .nav {
 		transform: translate(-100%, 0);
 		height: 100vh;
 		width: 50%;
@@ -1657,11 +1781,13 @@ body {
 		text-align: center;
 	}
 
-	.header__options {
+	.header__options,
+	.header_news .header__options {
 		width: 100%;
 	}
 
-	.nav {
+	.nav,
+	.header_news .nav {
 		width: 100%;
 	}
 
