--- a/delivery/templates/delivery/base-generation.html
+++ b/delivery/templates/delivery/base-generation.html
@@ -48,7 +48,7 @@
                 </ul>
             </nav>
         </header>
-        <script src="{% static 'defaultHeader.js' %}"></script>
+        <script src="{% static 'header.js' %}"></script>
         {% endblock %}
 
         {% block content %} {% endblock %}
