--- a/delivery/templates/delivery/index.html
+++ b/delivery/templates/delivery/index.html
@@ -388,5 +388,5 @@
         </div>
     </div>
 </div>
-<script src="{% static 'index.js' %}"></script>
+<script async src="{% static 'index.js' %}"></script>
 {% endblock %}
