--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -1,4 +1,4 @@
-@import 'reset-css';
+@import "reset-css";
 
 $primary-color-dark-blue: #181834;
 $primary-color-light-blue: #0d5195;
@@ -375,11 +375,6 @@ body {
 	right: 0;
 }
 
-.important-news {
-	max-width: 1336px;
-	margin: 20px auto 0 auto;
-}
-
 .action-box__container {
 	padding-bottom: 415px;
 	background-color: #f8f8f8;
@@ -563,6 +558,28 @@ body {
 
 	.title__underline {
 		margin-top: 20px;
+	}
+}
+
+.title_important-news {
+	.title__header {
+		font-size: 16px;
+	}
+
+	.title__underline {
+		margin: 10px 0;
+		width: 100%;
+	}
+}
+
+.title_news-content {
+	.title__header {
+		font-size: 24px;
+		margin-bottom: 3px;
+	}
+
+	.title__extra {
+		font-size: 14px;
 	}
 }
 
@@ -1063,7 +1080,7 @@ body {
 }
 
 .news__header:hover {
-	color: rgba(0, 0, 0, .7);
+	color: rgba(0, 0, 0, 0.7);
 	text-decoration: none;
 	transition: 200ms;
 }
@@ -1230,6 +1247,97 @@ body {
 	cursor: pointer;
 }
 
+.important-news {
+	max-width: 1336px;
+	margin: 20px auto 0 auto;
+}
+
+.important-news__item {
+	position: relative;
+	display: inline-block;
+	margin-right: 5px;
+	width: 300px;
+	height: 150px;
+	overflow: hidden;
+}
+
+.important-news__header {
+	margin: 7px 0 0 7px;
+}
+
+.important-news__link {
+	font-family: $montserrat-bold-font;
+	font-size: 14px;
+	text-transform: uppercase;
+	color: #ffffff;
+	text-decoration: none;
+}
+
+.important-news__image {
+	position: absolute;
+	display: block;
+	top: 0;
+	left: 0;
+	max-width: 100%;
+	min-height: 100%;
+	z-index: -1;
+}
+
+.important-news__shadow {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, .65);
+	z-index: -1;
+}
+
+.news-content {
+	max-width: 1336px;
+	margin: 50px auto;
+}
+
+.news-content__list {
+	margin-top: 50px;
+}
+
+.pagination {
+	margin: 10px 0;
+}
+
+.pagination__list {
+	display: flex;
+	justify-content: center;
+}
+
+.pagination__item {
+	vertical-align: top;
+	margin-left: 5px;
+	transition: 200ms;
+}
+
+.pagination__link:hover {
+	background-color: $primary-color-dark-blue;
+	transition: 200ms;
+}
+
+.pagination__item_current {
+	align-self: center;
+
+	.pagination__link {
+		background-color: $primary-color-dark-blue;
+	}
+}
+
+.pagination__link {
+	padding: 1px 4px;
+	border-radius: 4px;
+	text-decoration: none;
+	background-color: $primary-color-light-blue;
+	color: #ffffff;
+}
+
 @media screen and (max-width: 1336px) {
 	.header {
 		margin-left: 0;
@@ -1239,7 +1347,7 @@ body {
 	.header_news {
 		padding: 5px;
 		flex-flow: wrap;
-		
+
 		.logo {
 			justify-content: center;
 			width: 50%;
@@ -1382,9 +1490,7 @@ body {
 }
 
 @media screen and (max-width: 1200px) {
-
 	.header_news {
-
 		.logo {
 			width: 40%;
 		}
@@ -1464,7 +1570,6 @@ body {
 }
 
 @media screen and (max-width: 950px) {
-
 	.header_news {
 		.logo {
 			width: 30%;
