--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -583,6 +583,17 @@ body {
 	}
 }
 
+.title_news-content__item {
+	.title__header {
+		font-size: 15.5px;
+	}
+
+	.title__underline {
+		width: 100%;
+		margin: 5px 0;
+	}
+}
+
 .delivery-info__methods-list {
 	display: flex;
 	flex-flow: wrap;
@@ -1248,21 +1259,63 @@ body {
 }
 
 .important-news {
-	max-width: 1336px;
+	position: relative;
 	margin: 20px auto 0 auto;
+	max-width: 1336px;
+	overflow: hidden;
+}
+
+.important-news__button {
+	position: absolute;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	bottom: 0;
+	height: 150px;
+	width: 30px;
+	font-size: 180%;
+	background-color: rgba(0, 0, 0, 0.7);
+	color: #ffffff;
+	cursor: pointer;
+	transition: 200ms;
+	z-index: 10;
+}
+
+.important-news__button:hover {
+	color: #000000;
+	background-color: transparent;
+	transition: 200ms;
+}
+
+.important-news__button_right {
+	right: 0;
+}
+
+.important-news__list {
+	display: flex;
+	flex-wrap: nowrap;
+	width: 9999px;
+	transition: 600ms;
 }
 
 .important-news__item {
 	position: relative;
-	display: inline-block;
 	margin-right: 5px;
-	width: 300px;
+	width: 100%;
+	max-width: 300px;
 	height: 150px;
 	overflow: hidden;
 }
 
 .important-news__header {
+	display: inline-block;
 	margin: 7px 0 0 7px;
+	transition: 200ms;
+}
+
+.important-news__header:hover {
+	border-bottom: 1px solid #ffffff;
+	transition: 200ms;
 }
 
 .important-news__link {
@@ -1289,7 +1342,7 @@ body {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, .65);
+	background-color: rgba(0, 0, 0, 0.65);
 	z-index: -1;
 }
 
@@ -1299,7 +1352,52 @@ body {
 }
 
 .news-content__list {
+	display: flex;
+	justify-content: space-evenly;
+	flex-flow: wrap;
 	margin-top: 50px;
+}
+
+.news-content__item {
+	width: 100%;
+	margin: 0 20px 20px 0;
+	max-width: 300px;
+	min-width: 300px;
+	overflow: hidden;
+	box-shadow: 0 0 2px 0 rgba(0,0,0,.15);
+}
+
+.news-content__image {
+	display: block;
+	max-height: 180px;
+	width: 100%;
+}
+
+.news-content__text-container {
+	padding: 10px;
+}
+
+.news-content__header {
+	margin-bottom: 5px;
+}
+
+.news-content__link {
+	font-family: $montserrat-bold-font;
+	font-size: 15.5px;
+	text-transform: uppercase;
+	text-decoration: none;
+	color: #000000;
+	transition: 200ms;
+}
+
+.news-content__link:hover {
+	color: rgba(0, 0, 0, 0.5);
+	transition: 200ms;
+}
+
+.news-content__text {
+	font-size: 14px;
+	color: rgba(0, 0, 0, 0.8);
 }
 
 .pagination {
@@ -1487,6 +1585,14 @@ body {
 	.quote__elems-container {
 		justify-content: space-evenly;
 	}
+
+	.important-news {
+		margin: 20px 5px 0 5px;
+	}
+
+	.news-content {
+		margin: 50px 5px;
+	}
 }
 
 @media screen and (max-width: 1200px) {
@@ -1604,6 +1710,7 @@ body {
 @media screen and (max-width: 750px) {
 	.header {
 		position: fixed;
+		top: 0;
 		height: 37px;
 		width: 100%;
 		background-color: transparent;
