--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -2093,6 +2093,22 @@ body {
 	.custom-nav__wrapper {
 		display: block;
 	}
+
+	.important-news__button {
+		height: 125px;
+	}
+
+	.important-news__item {
+		width: 250px;
+		height: 125px;
+	}
+
+	.news-content__item {
+		margin-right: 0;
+		width: 100%;
+		min-width: auto;
+		max-width: 250px;
+	}
 }
 
 @media screen and (max-width: 300px) {
