--- a/delivery/templates/delivery/index.html
+++ b/delivery/templates/delivery/index.html
@@ -159,7 +159,7 @@
                 Intrinsicly drive stand-alone strategic theme areas vis-a-vis unique
                 metrics.
                 Efficiently cultivate empowered</div>
-            <button class="fleet-gallery__button">view all</button>
+            <a href="{% url 'vehisles' %}" class="fleet-gallery__button">view all</a>
         </div>
         <div class="fleet-gallery__slider">
             <ul id="fleet-gallery__slider-list" class="fleet-gallery__slider-list">
