--- a/static/styles.css
+++ b/static/styles.css
@@ -81,7 +81,8 @@ body {
   max-width: 1336px;
   z-index: 9999; }
 
-.header_news {
+.header_news,
+.header_vehisles {
   position: relative;
   display: flex;
   align-items: center;
@@ -90,7 +91,8 @@ body {
   padding: 5px;
   max-width: 100%;
   background-color: #0d5195; }
-  .header_news .logo {
+  .header_news .logo,
+  .header_vehisles .logo {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -98,17 +100,22 @@ body {
     width: auto;
     height: auto;
     background-color: transparent; }
-    .header_news .logo img {
+    .header_news .logo img,
+    .header_vehisles .logo img {
       display: none; }
-  .header_news .logo__title {
+  .header_news .logo__title,
+  .header_vehisles .logo__title {
     margin: 0 0 0 10px;
     line-height: 25px; }
-  .header_news .logo__company-name {
+  .header_news .logo__company-name,
+  .header_vehisles .logo__company-name {
     display: none; }
-  .header_news .header__options {
+  .header_news .header__options,
+  .header_vehisles .header__options {
     margin: 0;
     padding: 0; }
-  .header_news .nav__menu {
+  .header_news .nav__menu,
+  .header_vehisles .nav__menu {
     margin: 0; }
 
 .logo {
@@ -515,7 +522,15 @@ body {
   font-size: 14px; }
 
 .title_news-content__item .title__header {
-  font-size: 15.5px; }
+  display: block;
+  font-size: 15.5px;
+  text-decoration: none;
+  color: #000000;
+  transition: 200ms; }
+
+.title_news-content__item .title__header:hover {
+  color: rgba(0, 0, 0, 0.5);
+  transition: 200ms; }
 
 .title_news-content__item .title__underline {
   width: 100%;
@@ -646,14 +661,19 @@ body {
   color: rgba(255, 255, 255, 0.5); }
 
 .fleet-gallery__button {
+  display: block;
   width: 114px;
   height: 52px;
   border: 0;
   border-radius: 4px;
+  line-height: 52px;
   font-family: "Montserrat";
   font-size: 13px;
   text-transform: uppercase;
+  text-align: center;
+  text-decoration: none;
   background-color: #ffffff;
+  color: #000000;
   transition: 200ms; }
 
 .fleet-gallery__slider-button {
@@ -1165,10 +1185,8 @@ body {
   margin-top: 50px; }
 
 .news-content__item {
-  width: 100%;
   margin: 0 20px 20px 0;
-  max-width: 300px;
-  min-width: 300px;
+  width: 300px;
   overflow: hidden;
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.15); }
 
@@ -1199,12 +1217,32 @@ body {
   font-size: 14px;
   color: rgba(0, 0, 0, 0.8); }
 
+.filters {
+  max-width: 1336px;
+  margin: 0 auto; }
+
+.filters__form {
+  padding: 20px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly; }
+
 .pagination {
-  margin: 10px 0; }
+  display: flex;
+  flex-wrap: nowrap;
+  margin: 10px auto;
+  max-width: 1336px; }
 
 .pagination__list {
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  width: 50%; }
+
+.pagination__list_options {
+  justify-content: flex-end; }
+
+.pagination__text {
+  font-size: 15px; }
 
 .pagination__item {
   vertical-align: top;
@@ -1231,17 +1269,22 @@ body {
   .header {
     margin-left: 0;
     padding: 0; }
-  .header_news {
+  .header_news,
+  .header_vehisles {
     padding: 5px;
     flex-flow: wrap; }
-    .header_news .logo {
+    .header_news .logo,
+    .header_vehisles .logo {
       justify-content: center;
       width: 50%; }
-    .header_news .logo__title {
+    .header_news .logo__title,
+    .header_vehisles .logo__title {
       width: auto; }
-    .header_news .header__options {
+    .header_news .header__options,
+    .header_vehisles .header__options {
       width: 50%; }
-    .header_news .nav {
+    .header_news .nav,
+    .header_vehisles .nav {
       margin-top: 20px; }
   .header__options {
     justify-content: center; }
@@ -1315,9 +1358,11 @@ body {
     margin: 50px 5px; } }
 
 @media screen and (max-width: 1200px) {
-  .header_news .logo {
+  .header_news .logo,
+  .header_vehisles .logo {
     width: 40%; }
-  .header_news .header__options {
+  .header_news .header__options,
+  .header_vehisles .header__options {
     width: 60%; }
   .fleet-gallery__slider {
     padding-left: calc((100% - 380px) / 2); }
@@ -1361,9 +1406,11 @@ body {
     text-align: center; } }
 
 @media screen and (max-width: 950px) {
-  .header_news .logo {
+  .header_news .logo,
+  .header_vehisles .logo {
     width: 30%; }
-  .header_news .header__options {
+  .header_news .header__options,
+  .header_vehisles .header__options {
     width: 70%; }
   .slider__text {
     right: 200px; }
@@ -1383,33 +1430,41 @@ body {
     height: 37px;
     width: 100%;
     background-color: transparent; }
-  .header_news {
+  .header_news,
+  .header_vehisles {
     display: block;
     padding: 0; }
-    .header_news .logo {
+    .header_news .logo,
+    .header_vehisles .logo {
       display: block;
       width: 100%;
       background-color: #181834; }
-    .header_news .logo__title {
+    .header_news .logo__title,
+    .header_vehisles .logo__title {
       margin: 0; }
-    .header_news .nav {
+    .header_news .nav,
+    .header_vehisles .nav {
       margin-top: 0; }
-    .header_news .header__search {
+    .header_news .header__search,
+    .header_vehisles .header__search {
       margin-top: 10px; }
   .logo,
-  .header_news .logo {
+  .header_news .logo,
+  .header_vehisles .logo {
     padding: 0 0 0 10px;
     width: 100%;
     height: auto;
     text-align: left;
     background-color: #181834; }
     .logo img,
-    .header_news .logo img {
+    .header_news .logo img,
+    .header_vehisles .logo img {
       display: inline-block;
       padding: 5px;
       width: 50px; }
   .logo__title,
-  .header_news .logo__title {
+  .header_news .logo__title,
+  .header_vehisles .logo__title {
     display: inline-block;
     width: auto;
     line-height: 37px;
@@ -1443,7 +1498,8 @@ body {
   .trigram__line:nth-child(1) {
     margin-top: 6px; }
   .header__options,
-  .header_news .header__options {
+  .header_news .header__options,
+  .header_vehisles .header__options {
     justify-content: flex-start;
     flex-wrap: wrap-reverse;
     box-sizing: border-box;
@@ -1475,7 +1531,8 @@ body {
   .header__search {
     margin-bottom: 30px; }
   .nav,
-  .header_news .nav {
+  .header_news .nav,
+  .header_vehisles .nav {
     transform: translate(-100%, 0);
     height: 100vh;
     width: 50%;
@@ -1556,10 +1613,12 @@ body {
     width: 100%;
     text-align: center; }
   .header__options,
-  .header_news .header__options {
+  .header_news .header__options,
+  .header_vehisles .header__options {
     width: 100%; }
   .nav,
-  .header_news .nav {
+  .header_news .nav,
+  .header_vehisles .nav {
     width: 100%; }
   .slider__button {
     left: calc(50% - 50px); }
@@ -1625,7 +1684,21 @@ body {
     margin-right: 0;
     width: 100%;
     min-width: auto;
-    max-width: 250px; } }
+    max-width: 250px; }
+  .filters {
+    display: flex;
+    justify-content: center; }
+  .filters__form {
+    display: flex;
+    justify-content: center;
+    max-width: 1336px; }
+  .pagination {
+    flex-wrap: wrap; }
+  .pagination__list {
+    width: 100%; }
+  .pagination__list_options {
+    justify-content: center;
+    margin-top: 20px; } }
 
 @media screen and (max-width: 300px) {
   .action-box__action_button {
