--- a/delivery/templates/delivery/news.html
+++ b/delivery/templates/delivery/news.html
@@ -31,7 +31,7 @@
         <ul class="nav__menu">
             <li class="nav__item"><a href="{% url 'index' %}" class="nav__link">home</a></li>
             <li class="nav__item"><a href="#" class="nav__link">company</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">global coverage</a></li>
+            <li class="nav__item"><a href="{% url 'vehisles' %}?filters=off" class="nav__link">vehisles</a></li>
             <li class="nav__item"><a href="{% url 'news' %}" class="nav__link">news</a></li>
             <li class="nav__item"><a href="#" class="nav__link">contact</a></li>
         </ul>
