--- a/delivery/templates/delivery/vehisles.html
+++ b/delivery/templates/delivery/vehisles.html
@@ -30,7 +30,7 @@
         <ul class="nav__menu">
             <li class="nav__item"><a href="{% url 'index' %}" class="nav__link">home</a></li>
             <li class="nav__item"><a href="#" class="nav__link">company</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">global coverage</a></li>
+            <li class="nav__item"><a href="{% url 'vehisles' %}?filters=off" class="nav__link">vehisles</a></li>
             <li class="nav__item"><a href="{% url 'news' %}" class="nav__link">news</a></li>
             <li class="nav__item"><a href="#" class="nav__link">contact</a></li>
         </ul>
@@ -41,47 +41,98 @@
 
 {% block content %}
 <div class="filters">
+    <div class="filters__header-container">
+        <div class="filters__header">Filters</div>
+        <div id="filters__open-button" class="filters__open-button">&gt;</div>
+    </div>
     <form method="GET" class="filters__form" name="filters__form" id='filters__form'>
         {% csrf_token %}
-        <input type="checkbox" value="Can be booked?">
-        {% for filter in filters.form %}
-        {{filter}}
-        {% endfor %}
-        <input type="submit">
+        <div class="filters__filter-container">
+            <span class="filters__text">Can be booked?</span>{{filters.form.can_be_booked}}
+        </div>
+        <div class="filters__filter-container">
+            <span class="filters__text">Delivery method</span>{{filters.form.delivery_method}}
+        </div>
+        <div class="filters__filter-container">
+            <span class="filters__text">Status</span>{{filters.form.status}}
+        </div>
+        <div class="filters__filter-container">
+            <span class="filters__text">Price per use</span>{{filters.form.price_per_use}}
+        </div>
+        <div class="filters__filter-container">
+            <span class="filters__text">Price per km</span>{{filters.form.price_per_km}}
+        </div>
+        <div class="filters__filter-container">
+            <span class="filters__text">Maximum load</span>{{filters.form.maximum_load}}
+        </div>
+        <div class="filters__filter-container">
+            <span class="filters__text">Cargo volume</span>{{filters.form.cargo_volume}}
+        </div>
+        <input class="filters__submit" type="submit">
     </form>
 </div>
 
 <div class="vehisles">
-    {% for vehisle in page_obj %}
-    {{vehisle}}
-    {% endfor %}
+
+    <ul class="vehisles__list">
+        {% for vehisle in page_obj %}
+        <li class="vehisles__item">
+            {% if vehisle.photo != 'photo' %}
+            <img src="{{vehisle.photo.url}}" class="vehisles__image">
+            {% endif %}
+            <div class="vehisles__text-container">
+                <div class="vehisles__model">{{vehisle.model}}</div>
+                <div class="vehisles__type">{{vehisle.kind_of_vehisle}}</div>
+                {% if vehisle.photo == 'photo' %}
+                <div class="vehisles__extra-info">
+                    <div class="vehisles__text">
+                        <span class="vehisles__text_bold">Delivery method:</span> {{vehisle.delivery_method}}
+                    </div>
+                    <div class="vehisles__text">
+                        <span class="vehisles__text_bold">Max load:</span> {{vehisle.maximum_load}}kg
+                    </div>
+                    <div class="vehisles__text">
+                        <span class="vehisles__text_bold">Cargo volume:</span> {{vehisle.cargo_volume}}M<span class="vehisles__text_degree">3</span>
+                    </div>
+                    <div class="vehisles__text">
+                        <span class="vehisles__text_bold">Price per km:</span> {{vehisle.cargo_volume}} $/km
+                    </div>
+                    <div class="vehisles__text">
+                        <span class="vehisles__text_bold">Price per use:</span> {{vehisle.price_per_use}}$
+                    </div>
+                </div>
+                {% endif %}
+            </div>
+        </li>
+        {% endfor %}
+    </ul>
 </div>
 <div class="pagination">
     <ul class="pagination__list">
         {% if page_obj.number != 1 %}
         {% if page_obj.number != 2 %}
         <li class="pagination__item">
-            <a href="?page=1&vehisles_per_page={{vehisles_per_page}}{% for key,value in request.GET.items %}{% ifnotequal key 'vehisles_per_page' %}{% ifnotequal key 'page' %}&{{ key }}={{ value }}{% endifnotequal %}{% endifnotequal %}{% endfor %}"
+            <a href="?page=1&vehisles_per_page={{vehisles_per_page}}{% for key,value in request.GET.items %}{% if key != 'page' and key != 'vehisles_per_page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}"
                 class="pagination__link">&lt;&lt;</a>
         </li>
         {% endif %}
         <li class="pagination__item">
-            <a href="?page={{page_obj.previous_page_number}}&vehisles_per_page={{vehisles_per_page}}{% for key,value in request.GET.items %}{% ifnotequal key 'vehisles_per_page' %}{% ifnotequal key 'page' %}&{{ key }}={{ value }}{% endifnotequal %}{% endifnotequal %}{% endfor %}"
+            <a href="?page={{page_obj.previous_page_number}}&vehisles_per_page={{vehisles_per_page}}{% for key,value in request.GET.items %}{% if key != 'page' and key != 'vehisles_per_page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}"
                 class="pagination__link">{{page_obj.previous_page_number}}</a>
         </li>
         {% endif %}
         <li class="pagination__item pagination__item_current">
-            <a href="?page={{page_obj.number}}&vehisles_per_page={{vehisles_per_page}}{% for key,value in request.GET.items %}{% ifnotequal key 'vehisles_per_page' %}{% ifnotequal key 'page' %}&{{ key }}={{ value }}{% endifnotequal %}{% endifnotequal %}{% endfor %}"
+            <a href="?page={{page_obj.number}}&vehisles_per_page={{vehisles_per_page}}{% for key,value in request.GET.items %}{% if key != 'page' and key != 'vehisles_per_page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}"
                 class="pagination__link">{{page_obj.number}}</a>
         </li>
         {% if page_obj.number != page_obj.paginator.num_pages %}
         <li class="pagination__item">
-            <a href="?page={{page_obj.next_page_number}}&vehisles_per_page={{vehisles_per_page}}{% for key,value in request.GET.items %}{% ifnotequal key 'vehisles_per_page' %}{% ifnotequal key 'page' %}&{{ key }}={{ value }}{% endifnotequal %}{% endifnotequal %}{% endfor %}"
+            <a href="?page={{page_obj.next_page_number}}&vehisles_per_page={{vehisles_per_page}}{% for key,value in request.GET.items %}{% if key != 'page' and key != 'vehisles_per_page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}"
                 class="pagination__link">{{page_obj.next_page_number}}</a>
         </li>
         {% if page_obj.number != penultimate_page %}
         <li class="pagination__item">
-            <a href="?page={{page_obj.paginator.num_pages}}&vehisles_per_page={{vehisles_per_page}}{% for key,value in request.GET.items %}{% ifnotequal key 'vehisles_per_page' %}{% ifnotequal key 'page' %}&{{ key }}={{ value }}{% endifnotequal %}{% endifnotequal %}{% endfor %}"
+            <a href="?page={{page_obj.paginator.num_pages}}&vehisles_per_page={{vehisles_per_page}}{% for key,value in request.GET.items %}{% if key != 'page' and key != 'vehisles_per_page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}"
                 class="pagination__link">&gt;&gt;</a>
         </li>
         {% endif %}
@@ -90,17 +141,18 @@
     <ul class="pagination__list pagination__list_options">
         <div class="pagination__text">Vehisles per page</div>
         <li class="pagination__item">
-            <a href="?page={{page_obj.number}}&vehisles_per_page=1{% for key,value in request.GET.items %}{% ifnotequal key 'vehisles_per_page' %}{% ifnotequal key 'page' %}&{{ key }}={{ value }}{% endifnotequal %}{% endifnotequal %}{% endfor %}"
+            <a href="?page={{page_obj.number}}&vehisles_per_page=10{% for key,value in request.GET.items %}{% if key != 'page' and key != 'vehisles_per_page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}"
                 class="pagination__link">10</a>
         </li>
         <li class="pagination__item">
-            <a href="?page={{page_obj.number}}&vehisles_per_page=2{% for key,value in request.GET.items %}{% ifnotequal key 'vehisles_per_page' %}{% ifnotequal key 'page' %}&{{ key }}={{ value }}{% endifnotequal %}{% endifnotequal %}{% endfor %}"
+            <a href="?page={{page_obj.number}}&vehisles_per_page=20{% for key,value in request.GET.items %}{% if key != 'page' and key != 'vehisles_per_page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}"
                 class="pagination__link">20</a>
         </li>
         <li class="pagination__item">
-            <a href="?page={{page_obj.number}}&vehisles_per_page=3{% for key,value in request.GET.items %}{% ifnotequal key 'vehisles_per_page' %}{% ifnotequal key 'page' %}&{{ key }}={{ value }}{% endifnotequal %}{% endifnotequal %}{% endfor %}"
+            <a href="?page={{page_obj.number}}&vehisles_per_page=50{% for key,value in request.GET.items %}{% if key != 'page' and key != 'vehisles_per_page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}"
                 class="pagination__link">50</a>
         </li>
     </ul>
 </div>
+<script src="{% static 'vehisles.js' %}"></script>
 {% endblock %}
